--- a/process.ipynb
+++ b/process.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jnp code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,10 +15,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-6.52154744e+00, -1.73785531e+01,  1.84991848e+00, -2.50941215e+00,\n",
-       "        3.15409825e-02,  1.89227599e+00, -1.30774847e+00, -5.48254760e+00,\n",
-       "       -1.04562938e+00,  7.61588035e-03, -1.07369219e+00,  3.18628590e+00,\n",
-       "       -3.13064223e+00])"
+       "Array([-6.5215478e+00, -1.7378557e+01,  1.8499229e+00, -2.5094213e+00,\n",
+       "        3.1532530e-02,  1.8922727e+00, -1.3077401e+00, -5.4825573e+00,\n",
+       "       -1.0456098e+00,  7.6139262e-03, -1.0736727e+00,  3.1862919e+00,\n",
+       "       -3.1306453e+00], dtype=float32)"
       ]
      },
      "execution_count": 1,
@@ -24,7 +31,7 @@
     "import soundfile as sf\n",
     "\n",
     "sig,rate = sf.read('english.wav')\n",
-    "mfccx(sig,rate)[0]"
+    "mfccx(['english.wav'])[0]"
    ]
   },
   {
