--- a/process.ipynb
+++ b/process.ipynb
@@ -38,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Original code"
+    "Numpy code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,18 +55,25 @@
        "       -3.13064223e+00])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import python_speech_features\n",
+    "from mfcc import mfcc\n",
     "import soundfile as sf\n",
     "\n",
     "sig,rate = sf.read('english.wav')\n",
-    "python_speech_features.mfcc(sig,rate)[0]"
+    "mfcc(sig,rate)[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -85,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
